--- a/WaterRefill/Base.lproj/Main.storyboard
+++ b/WaterRefill/Base.lproj/Main.storyboard
@@ -45,35 +45,120 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vfD-XF-iVc" customClass="GMSMapView">
-                                <rect key="frame" x="0.0" y="116" width="375" height="471"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                            </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9xx-aA-o9C">
-                                <rect key="frame" x="0.0" y="56" width="375" height="60"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9xx-aA-o9C" userLabel="Top View">
+                                <rect key="frame" x="0.0" y="56" width="375" height="70"/>
                                 <subviews>
-                                    <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eCo-vk-yCN" customClass="DropDown" customModule="iOSDropDown">
-                                        <rect key="frame" x="270" y="13" width="97" height="34"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="AMb-zG-vph">
+                                        <rect key="frame" x="20" y="20" width="335" height="30"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Locate Water Refill Points" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YnC-I4-5XQ">
+                                                <rect key="frame" x="0.0" y="3" width="267" height="24"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EVi-xj-KMg">
+                                                <rect key="frame" x="277" y="0.0" width="58" height="30"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="16"/>
+                                                <state key="normal" title="10 KM">
+                                                    <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="rangeButtonSelected:" destination="BYZ-38-t0r" eventType="touchUpInside" id="zAo-cs-ubo"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </stackView>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="60" id="Qii-H9-YsY"/>
+                                    <constraint firstAttribute="trailing" secondItem="AMb-zG-vph" secondAttribute="trailing" constant="20" symbolic="YES" id="DqU-fi-3NJ"/>
+                                    <constraint firstAttribute="height" constant="70" id="LeE-Kg-b0d"/>
+                                    <constraint firstItem="AMb-zG-vph" firstAttribute="leading" secondItem="9xx-aA-o9C" secondAttribute="leading" constant="20" symbolic="YES" id="Wcb-uc-OO3"/>
+                                    <constraint firstAttribute="bottom" secondItem="AMb-zG-vph" secondAttribute="bottom" constant="20" symbolic="YES" id="gg8-ed-NMm"/>
+                                    <constraint firstItem="AMb-zG-vph" firstAttribute="top" secondItem="9xx-aA-o9C" secondAttribute="top" constant="20" symbolic="YES" id="uR9-mL-Lfc"/>
                                 </constraints>
                             </view>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="3WN-EH-sKm" userLabel="Main Stack View">
+                                <rect key="frame" x="0.0" y="126" width="375" height="521"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="d6m-rX-WrG" userLabel="Map&amp;TableView">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="431"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vfD-XF-iVc" customClass="GMSMapView">
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="431"/>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                            </view>
+                                            <tableView hidden="YES" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="iEP-ff-wJm">
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="431"/>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                <connections>
+                                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="FSU-Xe-hyb"/>
+                                                    <outlet property="delegate" destination="BYZ-38-t0r" id="1Yo-c8-1MW"/>
+                                                </connections>
+                                            </tableView>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="vfD-XF-iVc" secondAttribute="trailing" id="0W1-ne-s4l"/>
+                                            <constraint firstAttribute="trailing" secondItem="iEP-ff-wJm" secondAttribute="trailing" id="0kR-bt-Dbw"/>
+                                            <constraint firstAttribute="bottom" secondItem="vfD-XF-iVc" secondAttribute="bottom" id="AHe-WM-Aas"/>
+                                            <constraint firstItem="iEP-ff-wJm" firstAttribute="leading" secondItem="d6m-rX-WrG" secondAttribute="leading" id="Vf3-xE-Ukr"/>
+                                            <constraint firstItem="vfD-XF-iVc" firstAttribute="top" secondItem="d6m-rX-WrG" secondAttribute="top" id="fLD-I8-jsT"/>
+                                            <constraint firstAttribute="bottom" secondItem="iEP-ff-wJm" secondAttribute="bottom" id="qOy-Te-Rh4"/>
+                                            <constraint firstItem="vfD-XF-iVc" firstAttribute="leading" secondItem="d6m-rX-WrG" secondAttribute="leading" id="sVp-Qb-Gs0"/>
+                                            <constraint firstItem="iEP-ff-wJm" firstAttribute="top" secondItem="d6m-rX-WrG" secondAttribute="top" id="vsm-At-pp6"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pr9-Un-bSH" userLabel="No Refill View">
+                                        <rect key="frame" x="0.0" y="431" width="375" height="30"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No Water Refill Points Available with in 10km" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d0b-P8-uQB">
+                                                <rect key="frame" x="28" y="5.5" width="319" height="19.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="L23-ca-jnx"/>
+                                            <constraint firstItem="d0b-P8-uQB" firstAttribute="centerY" secondItem="pr9-Un-bSH" secondAttribute="centerY" id="d1Z-a6-XPk"/>
+                                            <constraint firstItem="d0b-P8-uQB" firstAttribute="centerX" secondItem="pr9-Un-bSH" secondAttribute="centerX" id="hYz-1j-im9"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xVE-ec-lHA" userLabel="Show Refill View">
+                                        <rect key="frame" x="0.0" y="461" width="375" height="60"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Water Refill Points Near You" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GEz-eu-DsA">
+                                                <rect key="frame" x="20" y="18" width="335" height="24"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstItem="GEz-eu-DsA" firstAttribute="centerY" secondItem="xVE-ec-lHA" secondAttribute="centerY" id="3kR-yG-GUt"/>
+                                            <constraint firstItem="GEz-eu-DsA" firstAttribute="leading" secondItem="xVE-ec-lHA" secondAttribute="leading" constant="20" symbolic="YES" id="8cd-XS-QKO"/>
+                                            <constraint firstAttribute="trailing" secondItem="GEz-eu-DsA" secondAttribute="trailing" constant="20" symbolic="YES" id="Pph-xL-Uk2"/>
+                                            <constraint firstAttribute="height" constant="60" id="lyj-xI-y4h"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="vfD-XF-iVc" secondAttribute="bottom" constant="60" id="2gZ-1z-S1f"/>
-                            <constraint firstItem="vfD-XF-iVc" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Uj8-EC-S93"/>
-                            <constraint firstItem="9xx-aA-o9C" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Vg8-Vx-K1h"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="vfD-XF-iVc" secondAttribute="trailing" id="joq-mQ-rlh"/>
-                            <constraint firstItem="9xx-aA-o9C" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="rhf-DT-yzv"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="9xx-aA-o9C" secondAttribute="trailing" id="sMC-Na-7Lu"/>
-                            <constraint firstItem="vfD-XF-iVc" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="60" id="twJ-rv-JHn"/>
+                            <constraint firstItem="3WN-EH-sKm" firstAttribute="top" secondItem="9xx-aA-o9C" secondAttribute="bottom" id="1zM-Kx-etO"/>
+                            <constraint firstItem="9xx-aA-o9C" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="2Ky-c7-Ppl"/>
+                            <constraint firstItem="3WN-EH-sKm" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="PaI-j1-gd2"/>
+                            <constraint firstItem="3WN-EH-sKm" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="dzo-Qm-SBH"/>
+                            <constraint firstItem="9xx-aA-o9C" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="eJT-Tr-MKZ"/>
+                            <constraint firstItem="9xx-aA-o9C" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="vC5-z9-CuS"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="3WN-EH-sKm" secondAttribute="bottom" id="ybs-Rc-QrL"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -81,8 +166,11 @@
                         <barButtonItem key="rightBarButtonItem" title="LOG IN" id="2bX-1Z-Q9w"/>
                     </navigationItem>
                     <connections>
-                        <outlet property="dropDownMenu" destination="eCo-vk-yCN" id="72N-Aj-oT8"/>
                         <outlet property="mapView" destination="vfD-XF-iVc" id="tKc-pW-Iyn"/>
+                        <outlet property="noRefillPointsView" destination="pr9-Un-bSH" id="dfd-lQ-hhE"/>
+                        <outlet property="selectRangeOption" destination="EVi-xj-KMg" id="vPm-82-VEY"/>
+                        <outlet property="showRefillPointsView" destination="xVE-ec-lHA" id="DAU-gF-MBx"/>
+                        <outlet property="tableView" destination="iEP-ff-wJm" id="Jhd-dk-peg"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
