--- a/WaterRefill/Base.lproj/Main.storyboard
+++ b/WaterRefill/Base.lproj/Main.storyboard
@@ -46,53 +46,52 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9xx-aA-o9C" userLabel="Top View">
-                                <rect key="frame" x="0.0" y="56" width="375" height="70"/>
+                                <rect key="frame" x="0.0" y="56" width="375" height="60"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="AMb-zG-vph">
-                                        <rect key="frame" x="20" y="20" width="335" height="30"/>
-                                        <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Locate Water Refill Points" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YnC-I4-5XQ">
-                                                <rect key="frame" x="0.0" y="3" width="267" height="24"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EVi-xj-KMg">
-                                                <rect key="frame" x="277" y="0.0" width="58" height="30"/>
-                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="16"/>
-                                                <state key="normal" title="10 KM">
-                                                    <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                </state>
-                                                <connections>
-                                                    <action selector="rangeButtonSelected:" destination="BYZ-38-t0r" eventType="touchUpInside" id="zAo-cs-ubo"/>
-                                                </connections>
-                                            </button>
-                                        </subviews>
-                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    </stackView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Locate Water Refill Points " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YnC-I4-5XQ">
+                                        <rect key="frame" x="10" y="18" width="267" height="24"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EVi-xj-KMg">
+                                        <rect key="frame" x="285" y="15" width="80" height="30"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="80" id="swP-9L-OiZ"/>
+                                            <constraint firstAttribute="height" constant="30" id="v6e-nx-DHj"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="16"/>
+                                        <state key="normal" title="10 KM">
+                                            <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="rangeButtonSelected:" destination="BYZ-38-t0r" eventType="touchUpInside" id="zAo-cs-ubo"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="AMb-zG-vph" secondAttribute="trailing" constant="20" symbolic="YES" id="DqU-fi-3NJ"/>
-                                    <constraint firstAttribute="height" constant="70" id="LeE-Kg-b0d"/>
-                                    <constraint firstItem="AMb-zG-vph" firstAttribute="leading" secondItem="9xx-aA-o9C" secondAttribute="leading" constant="20" symbolic="YES" id="Wcb-uc-OO3"/>
-                                    <constraint firstAttribute="bottom" secondItem="AMb-zG-vph" secondAttribute="bottom" constant="20" symbolic="YES" id="gg8-ed-NMm"/>
-                                    <constraint firstItem="AMb-zG-vph" firstAttribute="top" secondItem="9xx-aA-o9C" secondAttribute="top" constant="20" symbolic="YES" id="uR9-mL-Lfc"/>
+                                    <constraint firstAttribute="trailing" secondItem="EVi-xj-KMg" secondAttribute="trailing" constant="10" id="6xI-ob-k6u"/>
+                                    <constraint firstItem="YnC-I4-5XQ" firstAttribute="leading" secondItem="9xx-aA-o9C" secondAttribute="leading" constant="10" id="CCe-m1-eH3"/>
+                                    <constraint firstAttribute="height" constant="60" id="LeE-Kg-b0d"/>
+                                    <constraint firstItem="EVi-xj-KMg" firstAttribute="leading" secondItem="YnC-I4-5XQ" secondAttribute="trailing" constant="8" id="hse-6R-VjR"/>
+                                    <constraint firstItem="YnC-I4-5XQ" firstAttribute="centerY" secondItem="9xx-aA-o9C" secondAttribute="centerY" id="q9H-B2-Xic"/>
+                                    <constraint firstItem="EVi-xj-KMg" firstAttribute="centerY" secondItem="9xx-aA-o9C" secondAttribute="centerY" id="tUi-jR-0Vi"/>
                                 </constraints>
                             </view>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="3WN-EH-sKm" userLabel="Main Stack View">
-                                <rect key="frame" x="0.0" y="126" width="375" height="521"/>
+                                <rect key="frame" x="0.0" y="116" width="375" height="531"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="d6m-rX-WrG" userLabel="Map&amp;TableView">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="431"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="461"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vfD-XF-iVc" customClass="GMSMapView">
-                                                <rect key="frame" x="0.0" y="0.0" width="375" height="431"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="461"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                             </view>
                                             <tableView hidden="YES" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="iEP-ff-wJm">
-                                                <rect key="frame" x="0.0" y="0.0" width="375" height="431"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="461"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                 <connections>
                                                     <outlet property="dataSource" destination="BYZ-38-t0r" id="FSU-Xe-hyb"/>
@@ -113,7 +112,7 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pr9-Un-bSH" userLabel="No Refill View">
-                                        <rect key="frame" x="0.0" y="431" width="375" height="30"/>
+                                        <rect key="frame" x="0.0" y="461" width="375" height="30"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No Water Refill Points Available with in 10km" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d0b-P8-uQB">
                                                 <rect key="frame" x="28" y="5.5" width="319" height="19.5"/>
@@ -130,10 +129,10 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xVE-ec-lHA" userLabel="Show Refill View">
-                                        <rect key="frame" x="0.0" y="461" width="375" height="60"/>
+                                        <rect key="frame" x="0.0" y="491" width="375" height="40"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Water Refill Points Near You" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GEz-eu-DsA">
-                                                <rect key="frame" x="20" y="18" width="335" height="24"/>
+                                                <rect key="frame" x="20" y="8" width="335" height="24"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
@@ -144,7 +143,7 @@
                                             <constraint firstItem="GEz-eu-DsA" firstAttribute="centerY" secondItem="xVE-ec-lHA" secondAttribute="centerY" id="3kR-yG-GUt"/>
                                             <constraint firstItem="GEz-eu-DsA" firstAttribute="leading" secondItem="xVE-ec-lHA" secondAttribute="leading" constant="20" symbolic="YES" id="8cd-XS-QKO"/>
                                             <constraint firstAttribute="trailing" secondItem="GEz-eu-DsA" secondAttribute="trailing" constant="20" symbolic="YES" id="Pph-xL-Uk2"/>
-                                            <constraint firstAttribute="height" constant="60" id="lyj-xI-y4h"/>
+                                            <constraint firstAttribute="height" constant="40" id="lyj-xI-y4h"/>
                                         </constraints>
                                     </view>
                                 </subviews>
